Fix spacing and overflow of MessageSnippet etc

--- a/sass/components/inbox/mailbox-body.sass
+++ b/sass/components/inbox/mailbox-body.sass
@@ -1,7 +1,9 @@
-@import ../../utils/padding-margin
 @import ../../utils/flexbox
+@import ../../utils/padding-margin
+@import ../../utils/text
 
 .mailbox-body
   @extend .flex-grow-1
+  @extend .overflow-hidden
   @extend .p-5-r
   @extend .p-5-y
